--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "commander": "^9.4.0",
     "cosmiconfig": "^7.0.1",
+    "date-fns": "^2.29.1",
     "ora": "^6.1.2",
     "pg": "^8.7.3",
     "signale": "^1.4.0"
