--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
     "ava": "latest",
+    "dotenv": "^16.0.3",
     "eslint": "latest",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "latest",
     "lint-staged": "latest",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.20",
     "np": "^7.6.2",
     "prettier": "^2.7.1"
   },
@@ -60,10 +61,11 @@
     ]
   },
   "dependencies": {
-    "commander": "^9.4.0",
+    "commander": "^9.4.1",
     "cosmiconfig": "^7.0.1",
-    "date-fns": "^2.29.1",
-    "pg": "^8.7.3",
+    "date-fns": "^2.29.3",
+    "pg": "^8.8.0",
+    "pg-connection-string": "^2.5.0",
     "signale": "^1.4.0"
   }
 }
