--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@commitlint/config-conventional": "latest",
     "ava": "latest",
     "dotenv": "^16.0.3",
-    "eslint": "latest",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "latest",
     "lint-staged": "latest",
     "nodemon": "^2.0.20",
     "np": "^7.6.2",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "testcontainers": "^8.15.0"
   },
   "engines": {
     "node": ">= 18"
@@ -53,6 +54,9 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "ava": {
+    "timeout": "100s"
   },
   "lint-staged": {
     "*.js": [
